# Eve

./: .clang-format  readme.md
src/: CMakeLists.txt  Config.h.in
src-javascript/: index.html
src-javascript/scripts/: Client.js  main.js
src/eve/: CMakeLists.txt
src/eve/client/: CMakeLists.txt  Eve.cpp  Eve.hpp
src/eve/client/exe/: CMakeLists.txt  main.cpp
src/eve/msg/: CMakeLists.txt  Header.hpp  Http_parser.cpp  Http_parser.hpp  Reply.cpp  Reply.hpp  Request.cpp  Request.hpp
src/eve/server/: CMakeLists.txt  Connection.cpp  Connection.hpp  Eve.cpp  Eve.hpp
src/eve/server/api/: CMakeLists.txt  Index_handler.cpp  Index_handler.hpp  Json_handler.cpp  Json_handler.hpp  Request_handler.cpp  Request_handler.hpp
src/eve/server/config/: Eve_config.hpp
src/eve/server/data/: CMakeLists.txt  Data_definition.cpp  Data_definition.hpp  Email_not_found_exception.hpp  Email_storage.cpp  Email_storage.hpp
src/eve/server/exe/: CMakeLists.txt  main.cpp
src/eve/server/smtp/: CMakeLists.txt  Smtp_client.cpp  Smtp_client.hpp  Smtp_code_expection.hpp
src/eve/util/: CMakeLists.txt  Eve_exception.cpp  Eve_exception.hpp  Util.cpp  Util.hpp
